Analisis/parser.output
Terminales no usados en la gramática

   Value_Double
   Value_Char
   Ebr


Gramática

    0 $accept: S $end

    1 S: S Line
    2  | Line

    3 Line: Mkdisk MK
    4     | Rmdisk RM
    5     | Fdisk F
    6     | Mount M
    7     | Unmount UM
    8     | Report REP
    9     | Execute EXE
   10     | exit_command

   11 MK: MK MAKE
   12   | MAKE

   13 MAKE: Size Asign Value_Int
   14     | Path Asign P_OPTION
   15     | Unit Asign UBYTE
   16     | Fit Asign FOPTION

   17 RM: Path Asign P_OPTION

   18 F: F FIT
   19  | FIT

   20 FIT: Size Asign Value_Int
   21    | Unit Asign UBYTE
   22    | Path Asign P_OPTION
   23    | Type Asign TPARTITION
   24    | Fit Asign FOPTION
   25    | Delete Asign DTYPE
   26    | Name Asign STR_VAL
   27    | Add Asign Value_Int

   28 M: Path Asign P_OPTION Name Asign Id
   29  | Name Asign Id Path Asign P_OPTION
   30  | error

   31 UM: Identify Asign Id
   32   | error

   33 REP: Identify Asign Id Path Asign P_OPTION Name Asign REP_TYPE
   34    | error

   35 EXE: Path Asign P_OPTION
   36    | error

   37 STR_VAL: Value_String
   38        | Id
   39        | error

   40 UBYTE: Kbytes
   41      | Mbytes
   42      | Bytes
   43      | error

   44 FOPTION: Bf
   45        | Ff
   46        | Wf
   47        | error

   48 REP_TYPE: Mbr
   49         | Disc
   50         | error

   51 P_OPTION: Value_String
   52         | Url

   53 TPARTITION: Primary
   54           | Extended
   55           | Logic

   56 DTYPE: Fast
   57      | Full


Terminales con las reglas donde aparecen

$end (0) 0
error (256) 30 32 34 36 39 43 47 50
Value_Int <TEXT> (258) 13 20 27
Value_Double <TEXT> (259)
Value_Char <TEXT> (260)
Value_String <TEXT> (261) 37 51
Id <TEXT> (262) 28 29 31 33 38
Asign <TEXT> (263) 13 14 15 16 17 20 21 22 23 24 25 26 27 28 29 31
    33 35
exit_command <TEXT> (264) 10
Mkdisk <TEXT> (265) 3
Rmdisk <TEXT> (266) 4
Fdisk <TEXT> (267) 5
Mount <TEXT> (268) 6
Unmount <TEXT> (269) 7
Report <TEXT> (270) 8
Execute <TEXT> (271) 9
Size <TEXT> (272) 13 20
Fit <TEXT> (273) 16 24
Bf <TEXT> (274) 44
Ff <TEXT> (275) 45
Wf <TEXT> (276) 46
Unit <TEXT> (277) 15 21
Kbytes <TEXT> (278) 40
Mbytes <TEXT> (279) 41
Bytes <TEXT> (280) 42
Path <TEXT> (281) 14 17 22 28 29 33 35
Type <TEXT> (282) 23
Primary <TEXT> (283) 53
Extended <TEXT> (284) 54
Logic <TEXT> (285) 55
Delete <TEXT> (286) 25
Fast <TEXT> (287) 56
Full <TEXT> (288) 57
Name <TEXT> (289) 26 28 29 33
Add <TEXT> (290) 27
Mbr <TEXT> (291) 48
Ebr <TEXT> (292)
Disc <TEXT> (293) 49
Identify <TEXT> (294) 31 33
Url <TEXT> (295) 52


No terminales con las reglas donde aparecen

$accept (41)
    en la izquierda: 0
S <TEXT> (42)
    en la izquierda: 1 2, en la derecha: 0 1
Line <TEXT> (43)
    en la izquierda: 3 4 5 6 7 8 9 10, en la derecha: 1 2
MK <TEXT> (44)
    en la izquierda: 11 12, en la derecha: 3 11
MAKE <TEXT> (45)
    en la izquierda: 13 14 15 16, en la derecha: 11 12
RM <TEXT> (46)
    en la izquierda: 17, en la derecha: 4
F <TEXT> (47)
    en la izquierda: 18 19, en la derecha: 5 18
FIT <TEXT> (48)
    en la izquierda: 20 21 22 23 24 25 26 27, en la derecha: 18 19
M <TEXT> (49)
    en la izquierda: 28 29 30, en la derecha: 6
UM <TEXT> (50)
    en la izquierda: 31 32, en la derecha: 7
REP <TEXT> (51)
    en la izquierda: 33 34, en la derecha: 8
EXE <TEXT> (52)
    en la izquierda: 35 36, en la derecha: 9
STR_VAL <TEXT> (53)
    en la izquierda: 37 38 39, en la derecha: 26
UBYTE <TEXT> (54)
    en la izquierda: 40 41 42 43, en la derecha: 15 21
FOPTION <TEXT> (55)
    en la izquierda: 44 45 46 47, en la derecha: 16 24
REP_TYPE <TEXT> (56)
    en la izquierda: 48 49 50, en la derecha: 33
P_OPTION <TEXT> (57)
    en la izquierda: 51 52, en la derecha: 14 17 22 28 29 33 35
TPARTITION <TEXT> (58)
    en la izquierda: 53 54 55, en la derecha: 23
DTYPE <TEXT> (59)
    en la izquierda: 56 57, en la derecha: 25


Estado 0

    0 $accept: . S $end

    exit_command  desplazar e ir al estado 1
    Mkdisk        desplazar e ir al estado 2
    Rmdisk        desplazar e ir al estado 3
    Fdisk         desplazar e ir al estado 4
    Mount         desplazar e ir al estado 5
    Unmount       desplazar e ir al estado 6
    Report        desplazar e ir al estado 7
    Execute       desplazar e ir al estado 8

    S     ir al estado 9
    Line  ir al estado 10


Estado 1

   10 Line: exit_command .

    $default  reduce usando la regla 10 (Line)


Estado 2

    3 Line: Mkdisk . MK

    Size  desplazar e ir al estado 11
    Fit   desplazar e ir al estado 12
    Unit  desplazar e ir al estado 13
    Path  desplazar e ir al estado 14

    MK    ir al estado 15
    MAKE  ir al estado 16


Estado 3

    4 Line: Rmdisk . RM

    Path  desplazar e ir al estado 17

    RM  ir al estado 18


Estado 4

    5 Line: Fdisk . F

    Size    desplazar e ir al estado 19
    Fit     desplazar e ir al estado 20
    Unit    desplazar e ir al estado 21
    Path    desplazar e ir al estado 22
    Type    desplazar e ir al estado 23
    Delete  desplazar e ir al estado 24
    Name    desplazar e ir al estado 25
    Add     desplazar e ir al estado 26

    F    ir al estado 27
    FIT  ir al estado 28


Estado 5

    6 Line: Mount . M

    error  desplazar e ir al estado 29
    Path   desplazar e ir al estado 30
    Name   desplazar e ir al estado 31

    M  ir al estado 32


Estado 6

    7 Line: Unmount . UM

    error     desplazar e ir al estado 33
    Identify  desplazar e ir al estado 34

    UM  ir al estado 35


Estado 7

    8 Line: Report . REP

    error     desplazar e ir al estado 36
    Identify  desplazar e ir al estado 37

    REP  ir al estado 38


Estado 8

    9 Line: Execute . EXE

    error  desplazar e ir al estado 39
    Path   desplazar e ir al estado 40

    EXE  ir al estado 41


Estado 9

    0 $accept: S . $end
    1 S: S . Line

    $end          desplazar e ir al estado 42
    exit_command  desplazar e ir al estado 1
    Mkdisk        desplazar e ir al estado 2
    Rmdisk        desplazar e ir al estado 3
    Fdisk         desplazar e ir al estado 4
    Mount         desplazar e ir al estado 5
    Unmount       desplazar e ir al estado 6
    Report        desplazar e ir al estado 7
    Execute       desplazar e ir al estado 8

    Line  ir al estado 43


Estado 10

    2 S: Line .

    $default  reduce usando la regla 2 (S)


Estado 11

   13 MAKE: Size . Asign Value_Int

    Asign  desplazar e ir al estado 44


Estado 12

   16 MAKE: Fit . Asign FOPTION

    Asign  desplazar e ir al estado 45


Estado 13

   15 MAKE: Unit . Asign UBYTE

    Asign  desplazar e ir al estado 46


Estado 14

   14 MAKE: Path . Asign P_OPTION

    Asign  desplazar e ir al estado 47


Estado 15

    3 Line: Mkdisk MK .
   11 MK: MK . MAKE

    Size  desplazar e ir al estado 11
    Fit   desplazar e ir al estado 12
    Unit  desplazar e ir al estado 13
    Path  desplazar e ir al estado 14

    $default  reduce usando la regla 3 (Line)

    MAKE  ir al estado 48


Estado 16

   12 MK: MAKE .

    $default  reduce usando la regla 12 (MK)


Estado 17

   17 RM: Path . Asign P_OPTION

    Asign  desplazar e ir al estado 49


Estado 18

    4 Line: Rmdisk RM .

    $default  reduce usando la regla 4 (Line)


Estado 19

   20 FIT: Size . Asign Value_Int

    Asign  desplazar e ir al estado 50


Estado 20

   24 FIT: Fit . Asign FOPTION

    Asign  desplazar e ir al estado 51


Estado 21

   21 FIT: Unit . Asign UBYTE

    Asign  desplazar e ir al estado 52


Estado 22

   22 FIT: Path . Asign P_OPTION

    Asign  desplazar e ir al estado 53


Estado 23

   23 FIT: Type . Asign TPARTITION

    Asign  desplazar e ir al estado 54


Estado 24

   25 FIT: Delete . Asign DTYPE

    Asign  desplazar e ir al estado 55


Estado 25

   26 FIT: Name . Asign STR_VAL

    Asign  desplazar e ir al estado 56


Estado 26

   27 FIT: Add . Asign Value_Int

    Asign  desplazar e ir al estado 57


Estado 27

    5 Line: Fdisk F .
   18 F: F . FIT

    Size    desplazar e ir al estado 19
    Fit     desplazar e ir al estado 20
    Unit    desplazar e ir al estado 21
    Path    desplazar e ir al estado 22
    Type    desplazar e ir al estado 23
    Delete  desplazar e ir al estado 24
    Name    desplazar e ir al estado 25
    Add     desplazar e ir al estado 26

    $default  reduce usando la regla 5 (Line)

    FIT  ir al estado 58


Estado 28

   19 F: FIT .

    $default  reduce usando la regla 19 (F)


Estado 29

   30 M: error .

    $default  reduce usando la regla 30 (M)


Estado 30

   28 M: Path . Asign P_OPTION Name Asign Id

    Asign  desplazar e ir al estado 59


Estado 31

   29 M: Name . Asign Id Path Asign P_OPTION

    Asign  desplazar e ir al estado 60


Estado 32

    6 Line: Mount M .

    $default  reduce usando la regla 6 (Line)


Estado 33

   32 UM: error .

    $default  reduce usando la regla 32 (UM)


Estado 34

   31 UM: Identify . Asign Id

    Asign  desplazar e ir al estado 61


Estado 35

    7 Line: Unmount UM .

    $default  reduce usando la regla 7 (Line)


Estado 36

   34 REP: error .

    $default  reduce usando la regla 34 (REP)


Estado 37

   33 REP: Identify . Asign Id Path Asign P_OPTION Name Asign REP_TYPE

    Asign  desplazar e ir al estado 62


Estado 38

    8 Line: Report REP .

    $default  reduce usando la regla 8 (Line)


Estado 39

   36 EXE: error .

    $default  reduce usando la regla 36 (EXE)


Estado 40

   35 EXE: Path . Asign P_OPTION

    Asign  desplazar e ir al estado 63


Estado 41

    9 Line: Execute EXE .

    $default  reduce usando la regla 9 (Line)


Estado 42

    0 $accept: S $end .

    $default  aceptar


Estado 43

    1 S: S Line .

    $default  reduce usando la regla 1 (S)


Estado 44

   13 MAKE: Size Asign . Value_Int

    Value_Int  desplazar e ir al estado 64


Estado 45

   16 MAKE: Fit Asign . FOPTION

    error  desplazar e ir al estado 65
    Bf     desplazar e ir al estado 66
    Ff     desplazar e ir al estado 67
    Wf     desplazar e ir al estado 68

    FOPTION  ir al estado 69


Estado 46

   15 MAKE: Unit Asign . UBYTE

    error   desplazar e ir al estado 70
    Kbytes  desplazar e ir al estado 71
    Mbytes  desplazar e ir al estado 72
    Bytes   desplazar e ir al estado 73

    UBYTE  ir al estado 74


Estado 47

   14 MAKE: Path Asign . P_OPTION

    Value_String  desplazar e ir al estado 75
    Url           desplazar e ir al estado 76

    P_OPTION  ir al estado 77


Estado 48

   11 MK: MK MAKE .

    $default  reduce usando la regla 11 (MK)


Estado 49

   17 RM: Path Asign . P_OPTION

    Value_String  desplazar e ir al estado 75
    Url           desplazar e ir al estado 76

    P_OPTION  ir al estado 78


Estado 50

   20 FIT: Size Asign . Value_Int

    Value_Int  desplazar e ir al estado 79


Estado 51

   24 FIT: Fit Asign . FOPTION

    error  desplazar e ir al estado 65
    Bf     desplazar e ir al estado 66
    Ff     desplazar e ir al estado 67
    Wf     desplazar e ir al estado 68

    FOPTION  ir al estado 80


Estado 52

   21 FIT: Unit Asign . UBYTE

    error   desplazar e ir al estado 70
    Kbytes  desplazar e ir al estado 71
    Mbytes  desplazar e ir al estado 72
    Bytes   desplazar e ir al estado 73

    UBYTE  ir al estado 81


Estado 53

   22 FIT: Path Asign . P_OPTION

    Value_String  desplazar e ir al estado 75
    Url           desplazar e ir al estado 76

    P_OPTION  ir al estado 82


Estado 54

   23 FIT: Type Asign . TPARTITION

    Primary   desplazar e ir al estado 83
    Extended  desplazar e ir al estado 84
    Logic     desplazar e ir al estado 85

    TPARTITION  ir al estado 86


Estado 55

   25 FIT: Delete Asign . DTYPE

    Fast  desplazar e ir al estado 87
    Full  desplazar e ir al estado 88

    DTYPE  ir al estado 89


Estado 56

   26 FIT: Name Asign . STR_VAL

    error         desplazar e ir al estado 90
    Value_String  desplazar e ir al estado 91
    Id            desplazar e ir al estado 92

    STR_VAL  ir al estado 93


Estado 57

   27 FIT: Add Asign . Value_Int

    Value_Int  desplazar e ir al estado 94


Estado 58

   18 F: F FIT .

    $default  reduce usando la regla 18 (F)


Estado 59

   28 M: Path Asign . P_OPTION Name Asign Id

    Value_String  desplazar e ir al estado 75
    Url           desplazar e ir al estado 76

    P_OPTION  ir al estado 95


Estado 60

   29 M: Name Asign . Id Path Asign P_OPTION

    Id  desplazar e ir al estado 96


Estado 61

   31 UM: Identify Asign . Id

    Id  desplazar e ir al estado 97


Estado 62

   33 REP: Identify Asign . Id Path Asign P_OPTION Name Asign REP_TYPE

    Id  desplazar e ir al estado 98


Estado 63

   35 EXE: Path Asign . P_OPTION

    Value_String  desplazar e ir al estado 75
    Url           desplazar e ir al estado 76

    P_OPTION  ir al estado 99


Estado 64

   13 MAKE: Size Asign Value_Int .

    $default  reduce usando la regla 13 (MAKE)


Estado 65

   47 FOPTION: error .

    $default  reduce usando la regla 47 (FOPTION)


Estado 66

   44 FOPTION: Bf .

    $default  reduce usando la regla 44 (FOPTION)


Estado 67

   45 FOPTION: Ff .

    $default  reduce usando la regla 45 (FOPTION)


Estado 68

   46 FOPTION: Wf .

    $default  reduce usando la regla 46 (FOPTION)


Estado 69

   16 MAKE: Fit Asign FOPTION .

    $default  reduce usando la regla 16 (MAKE)


Estado 70

   43 UBYTE: error .

    $default  reduce usando la regla 43 (UBYTE)


Estado 71

   40 UBYTE: Kbytes .

    $default  reduce usando la regla 40 (UBYTE)


Estado 72

   41 UBYTE: Mbytes .

    $default  reduce usando la regla 41 (UBYTE)


Estado 73

   42 UBYTE: Bytes .

    $default  reduce usando la regla 42 (UBYTE)


Estado 74

   15 MAKE: Unit Asign UBYTE .

    $default  reduce usando la regla 15 (MAKE)


Estado 75

   51 P_OPTION: Value_String .

    $default  reduce usando la regla 51 (P_OPTION)


Estado 76

   52 P_OPTION: Url .

    $default  reduce usando la regla 52 (P_OPTION)


Estado 77

   14 MAKE: Path Asign P_OPTION .

    $default  reduce usando la regla 14 (MAKE)


Estado 78

   17 RM: Path Asign P_OPTION .

    $default  reduce usando la regla 17 (RM)


Estado 79

   20 FIT: Size Asign Value_Int .

    $default  reduce usando la regla 20 (FIT)


Estado 80

   24 FIT: Fit Asign FOPTION .

    $default  reduce usando la regla 24 (FIT)


Estado 81

   21 FIT: Unit Asign UBYTE .

    $default  reduce usando la regla 21 (FIT)


Estado 82

   22 FIT: Path Asign P_OPTION .

    $default  reduce usando la regla 22 (FIT)


Estado 83

   53 TPARTITION: Primary .

    $default  reduce usando la regla 53 (TPARTITION)


Estado 84

   54 TPARTITION: Extended .

    $default  reduce usando la regla 54 (TPARTITION)


Estado 85

   55 TPARTITION: Logic .

    $default  reduce usando la regla 55 (TPARTITION)


Estado 86

   23 FIT: Type Asign TPARTITION .

    $default  reduce usando la regla 23 (FIT)


Estado 87

   56 DTYPE: Fast .

    $default  reduce usando la regla 56 (DTYPE)


Estado 88

   57 DTYPE: Full .

    $default  reduce usando la regla 57 (DTYPE)


Estado 89

   25 FIT: Delete Asign DTYPE .

    $default  reduce usando la regla 25 (FIT)


Estado 90

   39 STR_VAL: error .

    $default  reduce usando la regla 39 (STR_VAL)


Estado 91

   37 STR_VAL: Value_String .

    $default  reduce usando la regla 37 (STR_VAL)


Estado 92

   38 STR_VAL: Id .

    $default  reduce usando la regla 38 (STR_VAL)


Estado 93

   26 FIT: Name Asign STR_VAL .

    $default  reduce usando la regla 26 (FIT)


Estado 94

   27 FIT: Add Asign Value_Int .

    $default  reduce usando la regla 27 (FIT)


Estado 95

   28 M: Path Asign P_OPTION . Name Asign Id

    Name  desplazar e ir al estado 100


Estado 96

   29 M: Name Asign Id . Path Asign P_OPTION

    Path  desplazar e ir al estado 101


Estado 97

   31 UM: Identify Asign Id .

    $default  reduce usando la regla 31 (UM)


Estado 98

   33 REP: Identify Asign Id . Path Asign P_OPTION Name Asign REP_TYPE

    Path  desplazar e ir al estado 102


Estado 99

   35 EXE: Path Asign P_OPTION .

    $default  reduce usando la regla 35 (EXE)


Estado 100

   28 M: Path Asign P_OPTION Name . Asign Id

    Asign  desplazar e ir al estado 103


Estado 101

   29 M: Name Asign Id Path . Asign P_OPTION

    Asign  desplazar e ir al estado 104


Estado 102

   33 REP: Identify Asign Id Path . Asign P_OPTION Name Asign REP_TYPE

    Asign  desplazar e ir al estado 105


Estado 103

   28 M: Path Asign P_OPTION Name Asign . Id

    Id  desplazar e ir al estado 106


Estado 104

   29 M: Name Asign Id Path Asign . P_OPTION

    Value_String  desplazar e ir al estado 75
    Url           desplazar e ir al estado 76

    P_OPTION  ir al estado 107


Estado 105

   33 REP: Identify Asign Id Path Asign . P_OPTION Name Asign REP_TYPE

    Value_String  desplazar e ir al estado 75
    Url           desplazar e ir al estado 76

    P_OPTION  ir al estado 108


Estado 106

   28 M: Path Asign P_OPTION Name Asign Id .

    $default  reduce usando la regla 28 (M)


Estado 107

   29 M: Name Asign Id Path Asign P_OPTION .

    $default  reduce usando la regla 29 (M)


Estado 108

   33 REP: Identify Asign Id Path Asign P_OPTION . Name Asign REP_TYPE

    Name  desplazar e ir al estado 109


Estado 109

   33 REP: Identify Asign Id Path Asign P_OPTION Name . Asign REP_TYPE

    Asign  desplazar e ir al estado 110


Estado 110

   33 REP: Identify Asign Id Path Asign P_OPTION Name Asign . REP_TYPE

    error  desplazar e ir al estado 111
    Mbr    desplazar e ir al estado 112
    Disc   desplazar e ir al estado 113

    REP_TYPE  ir al estado 114


Estado 111

   50 REP_TYPE: error .

    $default  reduce usando la regla 50 (REP_TYPE)


Estado 112

   48 REP_TYPE: Mbr .

    $default  reduce usando la regla 48 (REP_TYPE)


Estado 113

   49 REP_TYPE: Disc .

    $default  reduce usando la regla 49 (REP_TYPE)


Estado 114

   33 REP: Identify Asign Id Path Asign P_OPTION Name Asign REP_TYPE .

    $default  reduce usando la regla 33 (REP)
